--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,60 @@
+/*
+ * Licensed to Elasticsearch under one or more contributor
+ * license agreements. See the NOTICE file distributed with
+ * this work for additional information regarding copyright
+ * ownership. Elasticsearch licenses this file to you under
+ * the Apache License, Version 2.0 (the "License"); you may
+ * not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
+
+apply plugin: "java"
+apply plugin: "distribution"
+apply plugin: "idea"
+
+group = 'org.logstash.filewatch'
+version "1.0.0"
+
+//import java.nio.file.Files
+//import static java.nio.file.StandardCopyOption.REPLACE_EXISTING
+
 buildscript {
     repositories {
-        mavenLocal()
         mavenCentral()
-        jcenter()
     }
+
     dependencies {
-        classpath 'net.saliman:gradle-cobertura-plugin:2.2.8'
+        classpath group: 'org.jruby', name: 'jruby-complete', version: "9.1.13.0"
     }
 }
 
 repositories {
-    mavenLocal()
     mavenCentral()
-    jcenter()
 }
 
-gradle.projectsEvaluated {
-    tasks.withType(JavaCompile) {
-        options.compilerArgs << "-Xlint:deprecation"
-//        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
-    }
+project.sourceCompatibility = 1.8
+
+dependencies {
+    // Keep Joda version same as JRuby 1.7.25 and 9.1.9.0
+    compileOnly group: "joda-time", name: "joda-time", version: "2.8.2"
+
+    // https://mvnrepository.com/artifact/junit/junit
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    testCompile group: "joda-time", name: "joda-time", version: "2.8.2"
+
+    compileOnly group: 'org.jruby', name: 'jruby-complete', version: "9.1.13.0"
+
 }
-
-apply plugin: 'java'
-apply plugin: 'idea'
-
-group = 'org.logstash.filewatch'
-
-project.sourceCompatibility = 1.7
 
 task sourcesJar(type: Jar, dependsOn: classes) {
     from sourceSets.main.allSource
@@ -91,13 +118,8 @@ idea {
     }
 }
 
-dependencies {
-    provided 'org.jruby:jruby-core:1.7.22'
-    testCompile 'junit:junit:4.12'
-}
-
 // See http://www.gradle.org/docs/current/userguide/gradle_wrapper.html
 task wrapper(type: Wrapper) {
     description = 'Install Gradle wrapper'
-    gradleVersion = '2.8'
+    gradleVersion = '4.5.1'
 }
